# space-invaders

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  Space-Invaders-SFML  THANKS.md  todo.txt
cmake_modules/: FindCurses.cmake  config.cmake.in
cross/: crossi686.cmake  crossx86_64.cmake
include/: .entity.h.swp  .logic.h.swp  CMakeLists.txt  config.h  entity.h  logic.h  menu.h  menumanager.h  message.h  utility.h
include/gui/: input.h  visualmenu.h  windows.h
include/guincurses/: .windows.h.swp  CMakeLists.txt  cursesmenu.h  input.h  windows.h
logs/: logs.txt
src/: CMakeLists.txt  main.cpp  menu.cpp  menumanager.cpp  message.cpp
src/game/: CMakeLists.txt  entity.cpp  logic.cpp  utility.cpp
src/gui/: input.cpp  visualmenu.cpp  windows.cpp
src/guincurses/: .windows.cpp.swp  CMakeLists.txt  cursesmenu.cpp  input.cpp  windows.cpp
tools/: compile_all.sh  cross-compile.sh  debug.sh
